<resources>
    <string name="app_name">BWA MOV</string>
    <string name="mov_logo">mov logo</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>

    <!--  On boarding string  -->
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="now_playing_illustration">now playing illustration</string>

    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="pre_sale_illustration">Pre Sale illustration</string>

    <string name="cash_less">Cashless</string>
    <string name="cash_less_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="cash_less_illustration">Cashless illustration</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="nama">Nama</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_name">Welcome,\nTaufiq Hidayat</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="photo">Photo</string>
    <string name="coming_soon">Coming Soon</string>

    <string name="storyboard_desc">The Avengers must stop Thanos, a mad Titan, and his\n
army from getting their hands on all the infinity stones.\n
However, the mad Titan is prepared to go to any lengths\n
to carry out his insane plan.</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="selected">Selected</string>
    <string name="empty">Empty</string>
    <string name="booked">Booked</string>
    <string name="cinema_screen">cinema screen</string>
    <string name="back_arrow">back arrow</string>
    <string name="checkout">Checkout</string>
    <string name="date_and_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="success_desc">Tiket telah berhasil dibeli dan\n
selamat menikmati film</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="simpan_data_baru">Simpan data baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="memulai">Memulai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_posters">movie posters</string>
    <string name="storyboard">Storyboard</string>
    <string name="who_s_played">Who\'s Played</string>
</resources>