<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg"
    tools:context=".boarding.OnBoardingOneActivity">


    <Button
        android:id="@+id/btn_beli_tiket"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="invisible"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_bg_pink"
        android:text="@string/beli_tiket"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pilih_bangku"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pb_judul"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="Avengers: Infinity War"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24"
        app:tint="@android:color/white" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/cinema_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_judul"
        app:srcCompat="@drawable/path_20dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/layar_bioskop"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/booked"
        app:layout_constraintBottom_toTopOf="@+id/btn_beli_tiket"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/booked_bangku_state" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/booked"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/empty"
        app:layout_constraintBottom_toTopOf="@+id/btn_beli_tiket"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:srcCompat="@drawable/empty_bangku_state" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/empty"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/selected"
        app:layout_constraintBottom_toTopOf="@+id/btn_beli_tiket"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/selected_bangku_state" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/selected"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/pb_a1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/pb_a2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:srcCompat="@drawable/empty_bangku_state" />

    <ImageView
        android:id="@+id/pb_b1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/pb_a1"
        app:layout_constraintTop_toBottomOf="@+id/pb_a1"
        app:srcCompat="@drawable/empty_bangku_state" />

    <ImageView
        android:id="@+id/pb_a2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pb_a1"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:srcCompat="@drawable/empty_bangku_state" />

    <ImageView
        android:id="@+id/pb_a3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/pb_a4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:srcCompat="@drawable/empty_bangku_state" />

    <ImageView
        android:id="@+id/pb_b4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/pb_a4"
        app:layout_constraintTop_toBottomOf="@+id/pb_a4"
        app:srcCompat="@drawable/empty_bangku_state" />

    <ImageView
        android:id="@+id/pb_a4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pb_a3"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:srcCompat="@drawable/empty_bangku_state" />

    <ImageView
        android:id="@+id/pb_b3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/pb_b4"
        app:layout_constraintStart_toStartOf="@+id/pb_a3"
        app:layout_constraintTop_toBottomOf="@+id/pb_a3"
        app:srcCompat="@drawable/empty_bangku_state" />

    <ImageView
        android:id="@+id/pb_b2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/pb_a2"
        app:layout_constraintStart_toEndOf="@+id/pb_b1"
        app:layout_constraintTop_toBottomOf="@+id/pb_a2"
        app:srcCompat="@drawable/empty_bangku_state" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserat_semi_bold"
        android:text="A"
        android:textColor="@color/color_white"
        app:layout_constraintEnd_toStartOf="@+id/pb_a3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pb_a2"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/montserat_semi_bold"
        android:text="B"
        android:textColor="@color/color_white"
        app:layout_constraintEnd_toStartOf="@+id/pb_b3"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toEndOf="@+id/pb_b2"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>